Bug 283135 - auth-handler crashes
Summary: auth-handler crashes
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: auth-handler (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
: 282014 327184 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-01 13:26 UTC by Alin M Elena
Modified: 2013-11-05 18:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2011-10-01 13:26:02 UTC
Application: telepathy-kde-auth-handler (0.1)
KDE Platform Version: 4.7.2 (4.7.2) "release 1"
Qt Version: 4.7.4
Operating System: Linux 3.1.0-rc7-3-desktop x86_64
Distribution: "openSUSE 12.1 Beta 1 (x86_64)"

-- Information about the crash:
got this crash with auth-handler
I did nothing spectacular just putting my passwords in.

The crash can be reproduced every time.

-- Backtrace:
Application: Telepathy Authentication Handler (telepathy-kde-auth-handler), signal: Aborted
[KCrash Handler]
#6  0x00007fe80a351d25 in raise () from /lib64/libc.so.6
#7  0x00007fe80a35323b in abort () from /lib64/libc.so.6
#8  0x00007fe80a38be7e in __libc_message () from /lib64/libc.so.6
#9  0x00007fe80a391bb6 in malloc_printerr () from /lib64/libc.so.6
#10 0x0000000000408c6e in main (argc=1, argv=<optimized out>) at /usr/src/debug/telepathy-auth-handler-0.1.0.git.1316265006/main.cpp:83

Possible duplicates by query: bug 283067, bug 283029, bug 283019, bug 282952, bug 282889.

Reported using DrKonqi
Comment 1 David Edmundson 2011-10-06 10:13:27 UTC
To reproduce, start the auth-handler twice.
Comment 2 Daniele E. Domenichelli 2011-10-06 11:37:09 UTC
Git commit 4059c168e78128874a4fb3b5d5189db15ca3c722 by Daniele E. Domenichelli.
Committed on 06/10/2011 at 13:34.
Pushed by ddomenichelli into branch 'master'.

Use shared pointers to create handlers

BUG: 283135

M  +4    -5    main.cpp

http://commits.kde.org/telepathy-auth-handler/4059c168e78128874a4fb3b5d5189db15ca3c722
Comment 3 Daniele E. Domenichelli 2011-10-06 11:39:36 UTC
*** Bug 282014 has been marked as a duplicate of this bug. ***
Comment 4 David Edmundson 2013-11-05 18:17:59 UTC
*** Bug 327184 has been marked as a duplicate of this bug. ***