Use shared pointers to create handlers

BUG: 283135